# canonix

./: .gitignore  .gitmodules  README.md  default.nix  live-tests  run  shell.nix  stack.yaml  update-golden-outputs
canonix/: .gitignore  CHANGELOG.md  LICENSE  canonix.cabal
canonix/doc/: notes.md
canonix/exe/: Main.hs
canonix/src/: Example.hs  Format.hs
canonix/src/Canonix/: Monad.hs  Node.hs  Space.hs  TreeSitter.hs
canonix/src/Canonix/Monad/: CnxFmt.hs  Fmt.hs
canonix/tests/: Main.hs
canonix/tests/golden/: attrset-empty-multiline.input.nix  attrset-empty-multiline.output.nix  attrset-single-line.input.nix  attrset-single-line.output.nix  attrset-too-long-line.input.nix  attrset-too-long-line.output.nix  chained-lambdas.input.nix  chained-lambdas.output.nix  commented-attrset.input.nix  commented-attrset.output.nix  function-single-line.output.nix  function-too-long-line.input.nix  function-too-long-line.output.nix  newline-preservation.input.nix  newline-preservation.output.nix  nixos-module-docker.output.nix  nixos-module-postgresql.output.nix  nixpkgs-lib-attrsets.output.nix  nixpkgs-nix.output.nix  various-comments.input.nix  various-comments.output.nix
doc/: notes.md
nix/: default.nix  sources.json
nix/src/: haskell-tree-sitter.nix
