cabal-version:       2.4
name:                canonix
version:             0.1.0.0
synopsis:            A formatter for the Nix language
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Robert Hensing
maintainer:          robert@roberthensing.nl
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Format
  build-depends:       base ^>=4.12.0.0
                     , bytestring
                     , comonad
                     , containers
                     , free
                     , mtl
                     , recursion-schemes
                     , semigroups
                     , tree-sitter
                     , tree-sitter-nix
                     , utf8-string
  hs-source-dirs:      src
  default-language:    Haskell2010

executable canonix
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , async
                     , bytestring
                     , canonix
                     , optparse-applicative
  hs-source-dirs:      exe
  default-language:    Haskell2010
