cabal-version:       2.4
name:                canonix
version:             0.1.0.0
synopsis:            A formatter for the Nix language
-- description:
-- bug-reports:
license:             Apache-2.0
license-file:        LICENSE
author:              Robert Hensing
maintainer:          robert@roberthensing.nl
-- copyright:
category:            Language
extra-source-files:  CHANGELOG.md
                     tests/golden/*.nix

common src-main
  build-depends:       base ^>=4.12.0.0
                     , bytestring
                     , comonad
                     , containers
                     , free
                     , recursion-schemes
                     , semigroups
                     , tree-sitter
                     , tree-sitter-nix
  hs-source-dirs:      src
  default-language:    Haskell2010

library
  import:              src-main
  exposed-modules:     Format
                       Canonix.Monad

executable canonix
  main-is:             Main.hs
  build-depends:       base ^>=4.12.0.0
                     , async
                     , bytestring
                     , canonix
                     , optparse-applicative
  hs-source-dirs:      exe
  default-language:    Haskell2010

test-suite canonix-tests
  import: src-main
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
    Canonix.Monad
    Format
  hs-source-dirs: tests, src
  ghc-options: -Wall -threaded
  build-depends:
      base
    , hspec
    , directory
    , bytestring
